fix: Fix issue with last list item not clipped to border-radius of parent.

--- a/src/css/style-big.css
+++ b/src/css/style-big.css
@@ -46,6 +46,7 @@ blockquote {
   border-radius: 10px;
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.35);
   box-sizing: border-box;
+  overflow: hidden;
   padding: 10px 10px 0;
   width: 215px;
 }
